examples/test/testpolicy13761.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13761
  namespace: namespace425
spec:
  podSelector:
    matchLabels:
      key32: value38
      key45: value0
      key36: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value14
          key25: value14
          key12: value17
